@@ -69,6 +69,7 @@ enum xml_element
   TIP, NOTE, IMPORTANT, WARNING, CAUTION,
   ITEMIZE, ITEMFUNCTION, ITEM, ENUMERATE, TABLE, TABLEITEM, TABLETERM,
   INDEXTERM, 
+  MATH,
   XREF, XREFNODENAME, XREFINFONAME, XREFPRINTEDDESC, XREFINFOFILE,
     XREFPRINTEDNAME, 
   INFOREF, INFOREFNODENAME, INFOREFREFNAME, INFOREFINFONAME, 
